fixed/ added comments, added env variable LIBGL_ALWAYS_INDIRECT